--- a/style.css
+++ b/style.css
@@ -1625,7 +1625,7 @@ body.chat-page {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-	vertical-align: top;
+	line-height: 0.8;
 }
 
 .refresh-btn::before {
