--- a/style.css
+++ b/style.css
@@ -1609,8 +1609,8 @@ body.chat-page {
     position: absolute;
     top: 50%;
     left: 15px;
-    transform: translateY(-50%);
-    padding: 8px 10px 12px 10px;
+    transform: translateY(-50%) translateY(-1px) translateX(1px);
+    padding: 10px;
     background: rgba(102, 126, 234, 0.2);
     backdrop-filter: blur(5px);
     color: #e2e8f0;
